# compopt

./: .gitignore  CNAME  README.md  deploy_docs.sh  pyproject.toml  visualize_training.py
.github/workflows/: docs.yml
compopt/: __init__.py
compopt/agents/: __init__.py  baselines.py  llm_agent.py
compopt/configs/: __init__.py  frontier_like.json  large_b200_cluster.json  loader.py  small_ai_cluster.json  validator.py
compopt/envs/: __init__.py  chip_env.py  datacenter_env.py  joint_env.py  rack_env.py  registry.py  scheduling_env.py  wrappers.py
compopt/physics/: __init__.py  chip.py  electricity.py  fluids.py  server.py  workloads.py
compopt/rewards/: __init__.py  functions.py
compopt/scheduling/: __init__.py  jobs.py  scheduler.py
compopt/utils/: __init__.py  metrics.py  plotting.py  vec_env.py
docs/: citation.rst  conf.py  coolrl_reference.txt  index.rst
docs/api/: configs.rst
docs/guides/: configuration.md  llm_agents.md  rl_training.md
examples/: 01_chip_quickstart.py  02_rack_cooling.py  03_datacenter.py  04_scheduling.py  05_joint_datacenter.py  06_rl_training_sb3.py  07_benchmark_throughput.py  08_llm_agent.py  09_custom_rewards.py  10_config_driven.py
experiment-cmo_sac/: CHIP_QUICKSTART.md  CHIP_TRAINING.md  DATACENTER.md  ENVIRONMENTS.md  JOINT.md  README.md  SCHEDULING.md  __init__.py  analyze_dqn_policy.py  chip.sh  datacenter.sh  joint.sh  monitor_training.sh  requirements.txt  run_cmo_sac.py  scheduling.sh  test_cmo_sac.py  train_chip.py  train_scheduling_dqn.py  train_scheduling_dqn_improved.py  visualize_dqn_scheduling.py  visualize_scheduling.py
experiment-cmo_sac/cmo_sac/: __init__.py  cmo_sac_agent.py  constraints.py  constraints.py.backup  logger.py  networks.py  pareto.py  rewards.py  safety.py  trainer.py  wrappers.py
site/: .buildinfo  changelog.html  citation.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
site/.doctrees/: changelog.doctree  citation.doctree  index.doctree
site/_modules/: index.html
site/_sources/: changelog.rst.txt
tests/: test_config_validation.py  test_environments.py  test_physics.py  test_rewards_agents.py  test_scheduling.py  test_vecenv_config.py
(+68 files in other folders)
